src/test/deca/context/invalid/intermediaire2/boolean/03print-boolean-1.deca
// Description:
// Test de l'erreur contextuelle de l'affichage d'un littéral booléen, chose interdite pas la spécification.
//
// Resultats:
//  03print-boolean-1.deca:10:10:
//
// Historique:
//    crée le 10/06/2022
{
    print(true);
}